--- a/style.css
+++ b/style.css
@@ -1,8 +1,44 @@
+.main-header {
+  width:100%;
+  height:96px;
+  background:rgb(255, 255, 255);
+  position: relative;
+  box-shadow:2px 2px 4px #a7a7a7;
+}
+.right-header{
+  width:60%;
+  height:20px;
+  background-color: #861f41;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.header {
+ width:40%;
+ height:79px;
+ background:#861f41;
+ position: relative;
+ box-shadow: #868686;
+
+}
+
+.sub-header {
+  width:60%;
+  height:76px;
+  background:rgb(255, 255, 255);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("wallhaven-x8ye3z.jpg");
+    background:#ffffff;
     background-size: cover;
     background-position: center;
   }
@@ -11,41 +47,45 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(44, 32, 32, 0.8);
     border-radius: 10px;
   }
   
   h1 {
     text-align: center;
     margin-top: 0;
-    color: #ffffff;
+    color: #861f41;
   }
-  
   button {
-    display: block;
     margin: 10px auto;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #868686;
+    background-color: #861f41;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
+  .new-account-btn {
+    float: right;
+  }
   
   #account-form {
     display: none;
+    padding: 20px;
+    padding-left:35%;
   }
   
   #account-form h2 {
     margin-top: 0;
-    color: #ffffff;
+    padding-left: 15%;
+    color: #861f41;
   }
   
   #account-form label {
     display: block;
     margin-top: 10px;
-    color: #ffffff;
+    color: #746a6a;
   }
   
   #account-form input[type="text"],
@@ -54,9 +94,9 @@ body {
   #account-form input[type="tel"],
   #account-form textarea {
     width: 50%;
-    padding: 5px;
+    padding: 10px;
     font-size: 14px;
-    border: 1px solid #ffffff;
+    border: 1px solid #861f41;
     border-radius: 3px;
   }
   
@@ -65,7 +105,7 @@ body {
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #616161;
+    background-color: #861f41;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -74,11 +114,12 @@ body {
   
   #account-list {
     margin-top: 20px;
+    padding: 20px;
   }
   
   #account-list li {
     margin-bottom: 10px;
-    background-color: rgba(255, 255, 255, 0.705);
+    background-color:#ffffffc9;
     padding: 10px;
     border-radius: 5px;
   }
@@ -86,16 +127,15 @@ body {
   #account-list span {
     display: block;
     margin-bottom: 5px;
-    color: #333;
+    color: #861f41;
   }
   
   #account-list button {
     margin-left: 10px;
     padding: 5px 10px;
-    background-color: #555555;
+    background-color: #861f41;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
-  
